<resources>
    <string name="app_name">TutorHUB</string>
    <string name="action_settings">Settings</string>
    <string name="login_button_text">LOGIN</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="username_edit_text_hint">Username</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_prenotazioni_utente">Prenotazioni</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_prenotazioni_utente">Prenotazioni</string>
    <string name="tab_text_1">Attive</string>
    <string name="tab_text_2">Effettuate</string>
    <string name="tab_text_3">Cancellate</string>
    <string name="cancel_text">DISDICI</string>
    <string name="signup_button_text">SIGNUP</string>
    <string name="error_msg_internet_offline">Controllare la connessione a internet</string>
    <string name="error_msg_user_session_expired">Sessione utente scaduta</string>
    <string name="error_msg_generic">Si è verificato un errore</string>
    <string name="error_msg_empty_username">Lo username non può essere vuoto</string>
    <string name="error_msg_empty_password">La password non può essere vuota</string>
    <string name="error_msg_long_username">Lo username non può superare i %1$d caratteri</string>
    <string name="error_msg_long_password">La password non può superare i %1$d caratteri</string>
    <string name="error_msg_wrong_credentials">Username e/o password errati</string>
    <string name="error_msg_username_not_unique">Lo username è già in uso da un altro utente</string>
    <string name="error_msg_prenotazione_not_active">La prenotazione non è attiva</string>
    <string name="error_msg_ripetizione_not_available">Ripetizione non più disponibile</string>
    <string name="error_msg_user_is_busy">Hai già un impegno per quest\'ora</string>
    <string name="error_msg_login_required">Devi effettuare il login</string>
    <string name="success_msg_prenotazione_created">Prenotazione creata</string>
    <string name="success_msg_update">Aggiornato</string>
    <string name="success_msg_logout">Logout effettuato</string>
    <string name="success_msg_login">Benvenuto %1$s</string>
    <string name="empty_list">Nessun dato disponibile.</string>
</resources>
